--- a/manifest.json
+++ b/manifest.json
@@ -6,12 +6,12 @@
     "display" : "fullscreen",
     "icons" : [
         {
-           "src" : "images/logo.png",
+           "src" : "images/logo_icon.png",
            "sizes" : "64x64",
            "type" : "image/png"
         },
         {
-            "src" : "images/logo.png",
+            "src" : "images/logo_icon.png",
             "sizes" : "512x512",
             "type" : "image/png"
         }
